Committing sfdx-project.json

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -3,10 +3,21 @@
     {
       "path": "force-app",
       "default": true
+    },
+    {
+      "versionName": "ver 0.1",
+      "versionNumber": "0.1.0.NEXT",
+      "path": "NebulaLogger",
+      "default": false,
+      "package": "NebulaLoggerPoc",
+      "versionDescription": ""
     }
   ],
   "name": "StandardProject",
   "namespace": "",
   "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "65.0"
+  "sourceApiVersion": "65.0",
+  "packageAliases": {
+    "NebulaLoggerPoc": "0HogL0000000eGnSAI"
+  }
 }
