Committing sfdx-project.json

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -18,6 +18,7 @@
   "sfdcLoginUrl": "https://login.salesforce.com",
   "sourceApiVersion": "64.0",
   "packageAliases": {
-    "NebulaLoggerPoc": "0HogL0000000eGnSAI"
+    "NebulaLoggerPoc": "0HogL0000000eGnSAI",
+    "NebulaLoggerPoc@1.0.0-0-feature/US-0000024": "04tgL00000089kTQAQ"
   }
 }
