Committing sfdx-project.json

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -29,6 +29,7 @@
     "NebulaLoggerPoc": "0HogL0000000eGnSAI",
     "NebulaLoggerPoc@1.0.0-0-feature/US-0000024": "04tgL00000089kTQAQ",
     "NebulaLoggerPoc@0.1.0-1-main": "04tgL00000089nhQAA",
-    "HelloWorld": "0HogL0000000egbSAA"
+    "HelloWorld": "0HogL0000000egbSAA",
+    "HelloWorld@0.1.0-1-feature/US-0000025": "04tgL0000008BMTQA2"
   }
 }
