Change default package setting in sfdx-project.json

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -2,7 +2,7 @@
   "packageDirectories": [
     {
       "path": "force-app",
-      "default": true
+      "default": false
     },
     {
       "versionName": "ver 0.1",
@@ -24,7 +24,7 @@
       "versionName": "ver 0.1",
       "versionNumber": "0.1.0.NEXT",
       "path": "HelloWorld2",
-      "default": false,
+      "default": true,
       "package": "HelloWorld2",
       "versionDescription": ""
     }
