Add package and dependencies to sfdx-project.json

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -2,6 +2,7 @@
   "packageDirectories": [
     {
       "path": "force-app",
+      "package": "PackageBase",
       "default": true
     },
     {
@@ -23,6 +24,11 @@
     {
       "versionName": "ver 0.1",
       "versionNumber": "0.1.0.NEXT",
+      "dependencies": [
+        {
+          "package": "PackageBase"
+        }
+      ]
       "path": "HelloWorld2",
       "default": false,
       "package": "HelloWorld2",
