Add versioning information to sfdx-project.json

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,6 +1,8 @@
 {
   "packageDirectories": [
     {
+      "versionName": "ver 0.1",
+      "versionNumber": "0.1.0.NEXT",
       "path": "force-app",
       "package": "PackageBase",
       "default": false
